// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should generate Select snapshot 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "position": "relative",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <View
      accessibilityLabel="Open a dropdown"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 40,
          },
          Object {},
          undefined,
          Object {},
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "height": "100%",
            "justifyContent": "center",
            "paddingHorizontal": 12,
            "paddingRight": 55,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "fontSize": 12,
                "textAlign": "left",
              },
              Object {
                "color": "#808080",
              },
              undefined,
            ]
          }
        >
          Select...
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "position": "absolute",
              "right": 8,
              "top": 0,
            },
            undefined,
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/assets/icons/chevron-down.png",
            }
          }
          style={
            Array [
              Object {
                "height": 25,
                "width": 25,
                "zIndex": -1,
              },
              Object {
                "transform": Array [
                  Object {
                    "rotate": "0deg",
                  },
                ],
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Select with custom left icon should generate Select with custom left icon snapshot 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "position": "relative",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <View
      accessibilityLabel="Open a dropdown"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 40,
          },
          Object {},
          undefined,
          Object {},
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 8,
            },
            Object {
              "height": "100%",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/__tests__/assets/search.png",
            }
          }
          style={
            Object {
              "height": 15,
              "width": 15,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "height": "100%",
            "justifyContent": "center",
            "paddingHorizontal": 12,
            "paddingRight": 55,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "fontSize": 12,
                "textAlign": "left",
              },
              Object {
                "color": "#808080",
              },
              undefined,
            ]
          }
        >
          Select...
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "position": "absolute",
              "right": 8,
              "top": 0,
            },
            undefined,
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/assets/icons/chevron-down.png",
            }
          }
          style={
            Array [
              Object {
                "height": 25,
                "width": 25,
                "zIndex": -1,
              },
              Object {
                "transform": Array [
                  Object {
                    "rotate": "0deg",
                  },
                ],
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Select with searchable enabled should generate Select with searchable enabled snapshot 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "position": "relative",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <View
      accessibilityLabel="Open a dropdown"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 40,
          },
          Object {},
          undefined,
          Object {},
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "height": "100%",
            "justifyContent": "center",
            "paddingHorizontal": 12,
            "paddingRight": 55,
          }
        }
      >
        <TextInput
          accessibilityLabel="Place text"
          editable={true}
          onChangeText={[Function]}
          onPressIn={[Function]}
          placeholder="Select..."
          placeholderTextColor="#808080"
          style={
            Object {
              "fontSize": 12,
            }
          }
          textAlign="left"
          value=""
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "position": "absolute",
              "right": 8,
              "top": 0,
            },
            undefined,
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/assets/icons/chevron-down.png",
            }
          }
          style={
            Array [
              Object {
                "height": 25,
                "width": 25,
                "zIndex": -1,
              },
              Object {
                "transform": Array [
                  Object {
                    "rotate": "0deg",
                  },
                ],
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;
